--- a/index.html
+++ b/index.html
@@ -1,11 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.13.2/dist/axios.min.js"></script>
+    <link rel="stylesheet" href="./CSS/style.css">
+    <!-- Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&family=Edu+TAS+Beginner:wght@400..700&family=Fredoka:wght@300..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100..900;1,100..900&family=Story+Script&display=swap"
+        rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&family=Edu+TAS+Beginner:wght@400..700&family=Fredoka:wght@300..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100..900;1,100..900&family=Sometype+Mono:ital,wght@0,400..700;1,400..700&family=Story+Script&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
-    
+    <header>
+        <h1 class="header-title">
+            Estate '24
+        </h1>
+    </header>
+    <main>
+        <div class="container">
+            <div class="card">
+                <div class="card-pin">
+                    <img class="card-pin-img" src="./img/pin.svg" alt="pin">
+                </div>
+                <div class="card-img-container">
+                    <img class="card-img" src="./img/wall.png" alt="">
+                </div>
+                <div class="card-title">Milano</div>
+                <div class="card-date">15/01/2024</div>
+            </div>
+            <div class="card">
+                <div class="card-pin">
+                    <img class="card-pin-img" src="./img/pin.svg" alt="pin">
+                </div>
+                <div class="card-img-container">
+                    <img class="card-img" src="./img/wall.png" alt="">
+                </div>
+                <div class="card-title"></div>
+                <div class="card-date"></div>
+            </div>
+            <div class="card">
+                <div class="card-pin">
+                    <img class="card-pin-img" src="./img/pin.svg" alt="pin">
+                </div>
+                <div class="card-img-container">
+                    <img class="card-img" src="./img/wall.png" alt="">
+                </div>
+                <div class="card-title"></div>
+                <div class="card-date"></div>
+            </div>
+            <div class="card">
+                <div class="card-pin">
+                    <img class="card-pin-img" src="./img/pin.svg" alt="pin">
+                </div>
+                <div class="card-img-container">
+                    <img class="card-img" src="./img/wall.png" alt="">
+                </div>
+                <div class="card-title">Milano</div>
+                <div class="card-date">15/01/2024</div>
+            </div>
+            <div class="card">
+                <div class="card-pin">
+                    <img class="card-pin-img" src="./img/pin.svg" alt="pin">
+                </div>
+                <div class="card-img-container">
+                    <img class="card-img" src="./img/wall.png" alt="">
+                </div>
+                <div class="card-title"></div>
+                <div class="card-date"></div>
+            </div>
+            <div class="card">
+                <div class="card-pin">
+                    <img class="card-pin-img" src="./img/pin.svg" alt="pin">
+                </div>
+                <div class="card-img-container">
+                    <img class="card-img" src="./img/wall.png" alt="">
+                </div>
+                <div class="card-title"></div>
+                <div class="card-date"></div>
+            </div>
+            
+        </div>
+    </main>
+
+    <script src="./JS/script.js"></script>
 </body>
+
 </html>
