--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </h1>
     </header>
     <main>
-        <div class="container">
+        <div id="container">
             <div class="card">
                 <div class="card-pin">
                     <img class="card-pin-img" src="./img/pin.svg" alt="pin">
