--- a/index.html
+++ b/index.html
@@ -13,15 +13,12 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&family=Edu+TAS+Beginner:wght@400..700&family=Fredoka:wght@300..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100..900;1,100..900&family=Sometype+Mono:ital,wght@0,400..700;1,400..700&family=Story+Script&display=swap"
         rel="stylesheet">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&family=Edu+TAS+Beginner:wght@400..700&family=Fredoka:wght@300..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100..900;1,100..900&family=Sometype+Mono:ital,wght@0,400..700;1,400..700&family=Story+Script&display=swap"
-        rel="stylesheet">
 </head>
 
 <body>
     <header>
         <h1 class="header-title">
-            Estate'24
+            ESTATE '24
         </h1>
     </header>
     <main>
