feat Overlay, img and button

--- a/index.html
+++ b/index.html
@@ -34,10 +34,19 @@
                 <div class="card-title">Milano</div>
                 <div class="card-date">15/01/2024</div>
             </div> -->
-
-
         </div>
     </main>
+
+    <div class="display-none">
+    <div class="overlay">
+        <div class="overlay-container">
+            <div class="overlay-button-container">
+            <button id="overlay-button">Chiudi</button>
+            </div>
+            <img id="overlay-img" src="img/wall.png" alt="Overlay =Image">
+        </div>
+    </div>
+    </div>
 
     <script src="./JS/script.js"></script>
 </body>
