Aggiunta funzione di comporsa overlay al click della card e scomparsa al click del bottono "chiudi"

--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
         </div>
     </main>
 
-    <div class="display-none">
-    <div class="overlay">
-        <div class="overlay-container">
-            <div class="overlay-button-container">
-            <button id="overlay-button">Chiudi</button>
+    <div id="overlay" class="display-none">
+        <div class="overlay">
+            <div class="overlay-container">
+                <div class="overlay-button-container">
+                    <button id="overlay-button">Chiudi</button>
+                </div>
+                <img id="overlay-img" src="img/wall.png" alt="Overlay =Image">
             </div>
-            <img id="overlay-img" src="img/wall.png" alt="Overlay =Image">
         </div>
-    </div>
     </div>
 
     <script src="./JS/script.js"></script>
