Aggiunta immagine specifica al click  della card specifica e rotazione card

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="overlay-button-container">
                     <button id="overlay-button">Chiudi</button>
                 </div>
-                <img id="overlay-img" src="img/wall.png" alt="Overlay =Image">
+                <img id="overlay-img" src="" alt="">
             </div>
         </div>
     </div>
